Folding mother category solves overlap pbm + styling

--- a/static/src/css/web_dynatree.css
+++ b/static/src/css/web_dynatree.css
@@ -1,18 +1,35 @@
-.oe_dynatree {
-  position: absolute;
+div.oe_dynatree {
   z-index: 100;
+  min-width: 21em;
+  border: 1px solid rgb(123, 123, 123);
+  border-top: none;
 }
+
 .oe_dynatree_summary {
   width: 20em;
   height: 2.5ex;
-  border: 1px solid black;
+  border: 1px solid rgb(123, 123, 123);
   background-color: white;
-  border-radius:5px;
+  border-radius: 5px 5px 0 0;
+  padding: .5ex .5em;
+  vertical-align: center;
+}
+
+.oe_dynatree_summary span {
+  color: rgb(123, 123, 123);
+  font-style: italic;
 }
 
 .oe_dynatree_button_toggle {
   border: none;
   background-color: white;
+  float: right;
+  margin: -19px 0 0 0;
+  padding: 0;
+}
+
+div.oe_dynatree ul {
+  border: none;
 }
 
 
